typescript/checker/tests/conformance/es6/destructuring/iterableArrayPattern30.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            49,
        ),
        hi: BytePos(
            52,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/destructuring/iterableArrayPattern30.ts:2:34
  |
2 | const [[k1, v1], [k2, v2]] = new Map([["", true], ["hello", true]])
  |                                  ^^^

